--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
   "name": "rewardspoc",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@quiltt/react": "^4.0.0",
+    "@quiltt/react-native": "^4.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "@supabase/supabase-js": "^2.39.3",
-    "expo": "~50.0.5",
+    "base-64": "^1.0.0",
+    "dotenv": "^16.5.0",
+    "expo": "^52.0.0",
     "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react": "18.3.1",
+    "react-native": "0.76.9",
     "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^4.10.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-uuid": "^2.0.1"
+    "react-native-uuid": "^2.0.1",
+    "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@tsconfig/react-native": "^3.0.5",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
